# Quadrotor_msgs_ROS2

./: CMakeLists.txt  convert_msg_2_ros2.py  package.xml
include/quadrotor_msgs/: comm_types.h  decode_msgs.h  encode_msgs.h
msg/: AuxCommand.msg  Bspline.msg  LQRTrajectory.msg  Odometry.msg  OptimalTimeAllocator.msg  PolynomialTrajectory.msg  PositionCommand.msg  PositionCommand_back.msg  Px4ctrlDebug.msg  Replan.msg  ReplanCheck.msg  SO3Command.msg  Serial.msg  SpatialTemporalTrajectory.msg  SwarmCommand.msg  SwarmInfo.msg  TakeoffLand.msg  TrajectoryMatrix.msg
src/: encode_msgs.cpp
src/quadrotor_msgs/msg/: _AuxCommand.py  _Corrections.py  _Gains.py  _OutputData.py  _PPROutputData.py  _PositionCommand.py  _SO3Command.py  _Serial.py  _StatusData.py  _TRPYCommand.py
